--- a/myapp/templates/user_list.html
+++ b/myapp/templates/user_list.html
@@ -1,14 +1,9 @@
-<html>
+{% extends 'main.html' %}
+{% block content %}
     <h1>Here are the users thus far:</h1>
     <ul>
       {% for user in users %}
-        <li>
-          {{ user }}
-        </li>
+        <li>{{ user }}</li>
       {% endfor %}
     </ul>
-
-    <form method="POST" class="post-form" action="/user/new/">{% csrf_token %}{{ form.as_p }}
-      <input type="submit" value="Submit">
-    </form>
-</html>
+{% endblock %}
