--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -2,4 +2,5 @@
 {% block content %}
     <h1>Welcome!</h1>
     <a href="{% url 'add_user' %}"><button type="button" class="btn btn-default">Sign up</button></a>
+    <a href="{% url 'get_user' %}"><button type="button" class="btn btn-default">Get user</button></a>
 {% endblock %}
