Added error page for signup

--- a/myapp/static/css/main.css
+++ b/myapp/static/css/main.css
@@ -1,7 +1,9 @@
 body {
   font-family: 'Roboto', sans-serif;
-  color:white;
   background: url('../img/bg.jpg') fixed center;
+}
+h1 {
+  color:white;
 }
 #container {
   width:75%;
