--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
 {% block content %}
     <h1>Welcome!</h1>
-    <a href="{% url 'add_user' %}"><button type="button" class="btn btn-default">Sign up</button></a>
-    <a href="{% url 'get_user' %}"><button type="button" class="btn btn-default">Get user</button></a>
+    <a href="{% url 'signup' %}"><button type="button" class="btn btn-default">Sign up</button></a>
+    <a href="{% url 'login' %}"><button type="button" class="btn btn-default">Login</button></a>
 {% endblock %}
