--- a/myapp/templates/profile.html
+++ b/myapp/templates/profile.html
@@ -1,4 +1,4 @@
 {% extends 'main.html' %}
 {% block content %}
-    <h1>Thanks for signing up, {{user.name}}!</h1>
+    <h1>Thanks for signing up, {{user.first_name}}!</h1>
 {% endblock %}
