--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -1,7 +1,8 @@
 {% extends 'main.html' %}
 {% block content %}
     <h1>User login</h1>
-    <form method="POST" class="post-form" action="/user/get/">{% csrf_token %}{{ form.as_p }}
-      <input type="submit" value="Submit">
+    <form method="POST" class="post-form" action="/user/get/">
+      {% csrf_token %}{{ form.as_p }}
+      <input type="submit" value="Submit" class="btn btn-default">
     </form>
 {% endblock %}
