--- a/myapp/templates/main.html
+++ b/myapp/templates/main.html
@@ -10,6 +10,22 @@
 </head>
 <body>
 	<div id="container">
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <a class="navbar-brand" href="#">MyApp</a>
+		    </div>
+		    <ul class="nav navbar-nav">
+		      <li><a href="#">Page 1</a></li>
+		      <li><a href="#">Page 2</a></li>
+		      <li><a href="#">Page 3</a></li>
+		    </ul>
+				<div class="right">
+					<a href="{% url 'signup' %}"><button type="button" class="btn btn-default">Sign up</button></a>
+					<a href="{% url 'login' %}"><button type="button" class="btn btn-default">Login</button></a>
+				</div>
+		  </div>
+		</nav>
     {% block content %}
     {% endblock %}
 	</div>
