--- a/myapp/templates/main.html
+++ b/myapp/templates/main.html
@@ -13,7 +13,7 @@
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
-		      <a class="navbar-brand" href="#">MyApp</a>
+		      <a class="navbar-brand" href="{% url 'home' %}">MyApp</a>
 		    </div>
 		    <ul class="nav navbar-nav">
 		      <li><a href="#">Page 1</a></li>
