Fixed password issue

--- a/myapp/templates/main.html
+++ b/myapp/templates/main.html
@@ -23,6 +23,7 @@
 				<div class="right">
 					<a href="{% url 'signup' %}"><button type="button" class="btn btn-default">Sign up</button></a>
 					<a href="{% url 'login' %}"><button type="button" class="btn btn-default">Login</button></a>
+					<a href="{% url 'logout' %}"><button type="button" class="btn btn-default">Logout</button></a>
 				</div>
 		  </div>
 		</nav>
