--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,5 +1,4 @@
-{% extends 'main.html' %}
-{% load wishlist_tags %}
+{% extends 'layout.html' %}
 {% block content %}
-    <h1>Welcome!</h1>
+<h2>Welcome!</h2>
 {% endblock %}
