--- a/myapp/templates/signup.html
+++ b/myapp/templates/signup.html
@@ -1,11 +1,11 @@
-{% extends 'main.html' %}
+{% extends 'layout.html' %}
 {% load staticfiles %}
 {% block content %}
-    <h1>User sign up</h1>
-    <form method="POST" class="post-form" action="/user/new">
-      <div class="form-group">
-      {% csrf_token %}{{ form.as_p }}
-      <input type="submit" value="Submit" class="btn btn-default">
-      </div>
-    </form>
+<h2>User sign up</h2>
+<form method="POST" class="post-form" action="{% url 'signup' %}">
+  <div class="form-group">
+    {% csrf_token %}{{ form.as_p }}
+    <input type="submit" value="Submit" class="btn btn-default">
+  </div>
+</form>
 {% endblock %}
