--- a/myapp/templates/404.html
+++ b/myapp/templates/404.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'layout.html' %}
 {% block content %}
-    <h1>Something went terribly wrong!</h1>
+<h2>Something went terribly wrong!</h2>
 {% endblock %}
