--- a/myapp/templates/profile.html
+++ b/myapp/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'layout.html' %}
 {% block content %}
   <h2>{{user.username}}'s tasks:</h2>
   <p>Points: {{points}}</p>
